@@ -118,7 +118,7 @@ public abstract class AbstractPipeline extends AbstractFlowConstruct implements 
   private final List<Processor> processors;
   private MessageProcessorChain pipeline;
 
-  private Consumer<Exception> errorRouterForSourceResponseError;
+  private volatile Consumer<Exception> errorRouterForSourceResponseError;
 
   private final ProcessingStrategyFactory processingStrategyFactory;
   private final ProcessingStrategy processingStrategy;
@@ -166,9 +166,9 @@ public abstract class AbstractPipeline extends AbstractFlowConstruct implements 
     this.triggerFlow = source != null;
     this.apikitFlow = isApiKitFlow(getName());
 
-    this.processingStrategyFactory = processingStrategyFactory.orElseGet(() -> defaultProcessingStrategy());
-    if (this.processingStrategyFactory instanceof AsyncProcessingStrategyFactory) {
-      ((AsyncProcessingStrategyFactory) this.processingStrategyFactory).setMaxConcurrency(this.maxConcurrency);
+    this.processingStrategyFactory = processingStrategyFactory.orElseGet(this::defaultProcessingStrategy);
+    if (this.processingStrategyFactory instanceof AsyncProcessingStrategyFactory asyncProcessingStrategyFactory) {
+      asyncProcessingStrategyFactory.setMaxConcurrency(this.maxConcurrency);
     } else if (maxConcurrency != null) {
       LOGGER.warn("{} does not support 'maxConcurrency'. Ignoring the value.",
                   this.processingStrategyFactory.getClass().getSimpleName());
@@ -176,7 +176,7 @@ public abstract class AbstractPipeline extends AbstractFlowConstruct implements 
 
     processingStrategy = this.processingStrategyFactory.create(muleContext, getName());
     backpressureStrategySelector = new BackPressureStrategySelector(this);
-    FLOW_BACKPRESSURE_ERROR_TYPE = muleContext.getErrorTypeRepository().getErrorType(FLOW_BACK_PRESSURE).get();
+    FLOW_BACKPRESSURE_ERROR_TYPE = muleContext.getErrorTypeRepository().getErrorType(FLOW_BACK_PRESSURE).orElseThrow();
   }
 
   /**
@@ -274,7 +274,7 @@ public abstract class AbstractPipeline extends AbstractFlowConstruct implements 
     flowInterceptors.addAll(createInterceptors(interceptorManager.getFlowInterceptorFactories()
         .stream()
         .map(FlowInterceptorFactoryAdapter::new)
-        .collect(toList()), muleContext.getInjector()));
+        .toList(), muleContext.getInjector()));
 
     doInitialiseProcessingStrategy();
 
@@ -345,7 +345,7 @@ public abstract class AbstractPipeline extends AbstractFlowConstruct implements 
   protected Function<Publisher<CoreEvent>, Publisher<CoreEvent>> routeThroughProcessingStrategyTransformer() {
     FluxSinkRecorder<Either<Throwable, CoreEvent>> pipelineOutlet = new FluxSinkRecorder<>();
     return eventPublisher -> from(eventPublisher).transformDeferredContextual((pipelineUpstream, reactorContext) -> {
-      if (reactorContext.getOrDefault(WITHIN_PROCESS_TO_APPLY, false)) {
+      if (reactorContext.getOrDefault(WITHIN_PROCESS_TO_APPLY, false).booleanValue()) {
         return handlePipelineError(from(propagateCompletion(pipelineUpstream, pipelineOutlet.flux(),
                                                             pipelineInlet -> splicePipeline(pipelineOutlet,
                                                                                             pipelineInlet, true),
@@ -388,7 +388,7 @@ public abstract class AbstractPipeline extends AbstractFlowConstruct implements 
         // default. This check may not be needed anymore for ProactorStreamProcessingStrategy. See MULE-16988.
         .doOnNext(getSource() == null || getSource().getBackPressureStrategy() == WAIT
             ? event -> sink.accept(event)
-            : event -> sinkEmit(event))
+            : this::sinkEmit)
         .map(e -> Either.empty());
   }
 
@@ -454,8 +454,8 @@ public abstract class AbstractPipeline extends AbstractFlowConstruct implements 
       getStatistics().incReceivedEvents();
 
       FlowCallStack flowCallStack = event.getFlowCallStack();
-      if (flowCallStack instanceof DefaultFlowCallStack) {
-        ((DefaultFlowCallStack) flowCallStack).push(new FlowStackElement(AbstractPipeline.this.getName(), getIdentifier(), null));
+      if (flowCallStack instanceof DefaultFlowCallStack fs) {
+        fs.push(new FlowStackElement(AbstractPipeline.this.getName(), getIdentifier(), null));
       }
       notificationFirer.dispatch(new PipelineMessageNotification(createInfo(event, null, AbstractPipeline.this),
                                                                  AbstractPipeline.this.getName(), PROCESS_START));
@@ -468,8 +468,8 @@ public abstract class AbstractPipeline extends AbstractFlowConstruct implements 
 
         MessagingException messagingException = null;
         if (throwable != null) {
-          if (throwable instanceof MessagingException) {
-            messagingException = (MessagingException) throwable;
+          if (throwable instanceof MessagingException msgException) {
+            messagingException = msgException;
           } else {
             messagingException = new MessagingException(event, throwable, AbstractPipeline.this);
           }
@@ -484,8 +484,8 @@ public abstract class AbstractPipeline extends AbstractFlowConstruct implements 
   private void fireCompleteNotification(CoreEvent event, MessagingException messagingException) {
     if (event != null) {
       FlowCallStack flowCallStack = event.getFlowCallStack();
-      if (flowCallStack instanceof DefaultFlowCallStack) {
-        ((DefaultFlowCallStack) flowCallStack).pop();
+      if (flowCallStack instanceof DefaultFlowCallStack fs) {
+        fs.pop();
       }
     } else {
       LOGGER.warn("No event on flow completion", messagingException);
@@ -559,8 +559,8 @@ public abstract class AbstractPipeline extends AbstractFlowConstruct implements 
     stopSafely(this::doStop);
     stopSafely(this::doStopProcessingStrategy);
 
-    if (e instanceof MuleException) {
-      throw (MuleException) e;
+    if (e instanceof MuleException muleException) {
+      throw muleException;
     }
 
     throw new DefaultMuleException(e);
